commit final de la mort qui tue

--- a/src/app/order-stage/order-stage.component.html
+++ b/src/app/order-stage/order-stage.component.html
@@ -35,7 +35,7 @@
                   <th>{{ ligneCmd.produit.nom }}</th>
                   <th>{{ ligneCmd.produit.prix }}</th>
                   <th>
-                    <input type="typeInput(ligneCmd.produit)" min="0" [(ngModel)]="ligneCmd.quantite" />
+                    <input type="number" min="0" [(ngModel)]="ligneCmd.quantite" />
                   </th>
                   <th >{{ ligneCmd.prixTotal() }}€ </th>
                 </tr>
